[tool.poetry]
name = "HistoQuant"
version = "0.1.0"
description = "Cellpose for muscle biopsy images"
authors = ["Corentin Meyer"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"
cellpose = "^1"
pillow = "^9"
ipykernel = "^6.9.1"
openpyxl = "^3.0.9"
UpSetPlot = "^0.6.0"
scikit-image = "^0.19.2"
nbconvert = "^6.4.2"
black = "^22.1.0"
pylint = "^2.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
